--- a/IDAHelper.dproj
+++ b/IDAHelper.dproj
@@ -140,6 +140,7 @@
         <DCCReference Include="Source\uSVD_Type.pas"/>
         <DCCReference Include="Source\uIDC_Script.pas"/>
         <DCCReference Include="Common\Misc\uMisc.pas"/>
+        <DCCReference Include="Common\Misc\uDynArray.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
